src/parse/snapshots/script_lang__parse__test__call__nested.snap
---
source: src/parse/test.rs
assertion_line: 560
expression: ast

---
Call(
    Call {
        callee: Call(
            Call {
                callee: Call(
                    Call {
                        callee: Ident(
                            Ident {
                                sym: "hugo",
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Field(
                            Ident {
                                sym: "name",
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                            },
                        ),
                    },
                ),
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Field(
                    Ident {
                        sym: "print",
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                ),
            },
        ),
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Fn(
            [],
        ),
    },
)
