src/parse/snapshots/script_lang__parse__test__call__simple.snap
---
source: src/parse/test.rs
assertion_line: 526
expression: ast

---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Fn(
            [],
        ),
    },
)
