src/parse/snapshots/script_lang__parse__test__call__with_exprs.snap
---
source: src/parse/test.rs
assertion_line: 583
expression: ast

---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Fn(
            [
                Call(
                    Call {
                        callee: Call(
                            Call {
                                callee: BinaryOp(
                                    BinaryOp {
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                        lhs: Literal(
                                            Number(
                                                10.0,
                                                Span {
                                                    start: 0,
                                                    end: 0,
                                                },
                                            ),
                                        ),
                                        rhs: Literal(
                                            Number(
                                                5.0,
                                                Span {
                                                    start: 0,
                                                    end: 0,
                                                },
                                            ),
                                        ),
                                        kind: Add,
                                    },
                                ),
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Field(
                                    Ident {
                                        sym: "abs",
                                        span: Span {
                                            start: 0,
                                            end: 0,
                                        },
                                    },
                                ),
                            },
                        ),
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Fn(
                            [],
                        ),
                    },
                ),
            ],
        ),
    },
)
